style: implement the hero section

--- a/app/Components/Pages/Home.razor
+++ b/app/Components/Pages/Home.razor
@@ -1,11 +1,18 @@
 ﻿@page "/"
 @layout MainLayout
 
-<PageTitle>.NET Cameroon 🇨🇲 | Home</PageTitle>
+<PageTitle>Djoufson | Home</PageTitle>
 <HeadContent>
     <meta name="description" content="Djoufson Che - .NET Fullstack Engineer passionate about open source, Microsoft technologies, and blogging. Explore my projects, technical blog, community work, and get in touch for collaborations.">
 </HeadContent>
 
 <div>
-    <h1 class="heading heading-1">Hello world</h1>
+    <!-- Hero section -->
+    <section>
+        <div class="container mx-auto relative flex flex-col gap-4 justify-center h-[600px] p-2 md:p-4 mb-7">
+            <h1 class="heading heading-1 text-center">Hi, I'm <span class="text-primary">Djoufson Che</span>, a .NET Fullstack Engineer.</h1>
+            <p class="text-center md:text-2xl">Building robust applications with <span class="text-primary font-bold">.NET</span> while empowering the <span class="text-primary font-bold">open-source</span> community.</p>
+            <img src="/assets/djouf.png" alt="Djoufson Che's Avatar" class="absolute w-[100px] h-[100px] rounded-full bottom-0 left-1/2 -translate-x-1/2">
+        </div>
+    </section>
 </div>
