--- a/app/Components/_Imports.razor
+++ b/app/Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using app
 @using app.Components
+@using app.Components.Partials
 @using Microsoft.AspNetCore.Authorization
 @using app.Components.Layout
 @using System.Security.Claims
