--- a/app/styles/input.css
+++ b/app/styles/input.css
@@ -6,6 +6,15 @@
     font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
 }
+
+body{
+    @apply bg-white;
+}
+
+::selection{
+    @apply bg-selection text-white;
+}
+
 @media (min-width: 768px) {
     #nav-links {
         @apply p-4;
@@ -19,27 +28,15 @@
 }
 
 .heading-1 {
-    @apply text-heading-1 leading-heading-1 mb-heading-1 font-heading font-bold;
+    @apply text-5xl md:text-8xl text-black leading-heading-1 mb-heading-1 font-heading font-bold;
 }
 
 .heading-2 {
-    @apply text-heading-2 leading-heading-2 mb-heading-2 font-heading font-bold;
+    @apply text-3xl md:text-5xl leading-heading-2 mb-heading-2 font-heading font-bold;
 }
 
 .heading-3 {
-    @apply text-heading-3 leading-heading-3 mb-heading-3 font-heading font-bold;
-}
-
-.heading-4 {
-    @apply text-heading-4 leading-heading-4 mb-heading-4 font-heading font-bold;
-}
-
-.heading-5 {
-    @apply text-heading-5 leading-heading-5 mb-heading-5 font-bold;
-}
-
-.heading-6 {
-    @apply text-heading-6 leading-heading-6 mb-heading-6 font-bold;
+    @apply text-xl md:text-3xl leading-heading-3 mb-heading-3 font-heading font-bold;
 }
 
 /* Buttons */
@@ -48,27 +45,20 @@
 }
 
 .btn.btn-primary{
-    @apply bg-primary hover:bg-primary-accentuation active:bg-primary transition-all text-white;
+    @apply bg-primary hover:bg-primary-hover active:bg-primary transition-all text-white;
 }
 
 .btn.btn-secondary{
-    @apply bg-secondary hover:bg-secondary-accentuation transition-all active:bg-secondary text-white;
+    @apply bg-secondary hover:bg-secondary-hover transition-all active:bg-secondary text-white;
 }
 
-.btn.btn-tertiary{
-    @apply bg-tertiary hover:bg-tertiary-accentuation transition-all active:bg-tertiary text-white;
-}
 
 .btn.btn-outline-primary{
-    @apply border border-primary bg-transparent hover:bg-primary transition-all active:bg-primary-accentuation text-primary hover:text-white;
+    @apply border border-primary bg-transparent hover:bg-primary transition-all active:bg-primary-hover text-primary hover:text-white;
 }
 
 .btn.btn-outline-secondary{
-    @apply border border-secondary bg-transparent hover:bg-secondary transition-all active:bg-secondary-accentuation text-secondary hover:text-white;
-}
-
-.btn.btn-outline-tertiary{
-    @apply border border-tertiary bg-transparent hover:bg-tertiary transition-all active:bg-tertiary-accentuation text-tertiary hover:text-white;
+    @apply border border-secondary bg-transparent hover:bg-secondary transition-all active:bg-secondary-hover text-secondary hover:text-white;
 }
 
 .btn.btn-outline-white{
@@ -81,15 +71,11 @@
 }
 
 .link.link-primary{
-    @apply text-primary hover:text-primary-accentuation;
+    @apply text-primary hover:text-primary-hover;
 }
 
 .link.link-secondary{
-    @apply text-secondary hover:text-secondary-accentuation;
-}
-
-.link.link-tertiary{
-    @apply text-tertiary hover:text-tertiary-accentuation;
+    @apply text-secondary hover:text-secondary-hover;
 }
 
 .link.link-white{
