style: implement the about section

--- a/app/Components/Pages/Home.razor
+++ b/app/Components/Pages/Home.razor
@@ -9,10 +9,46 @@
 <div>
     <!-- Hero section -->
     <section>
-        <div class="container mx-auto relative flex flex-col gap-4 justify-center h-[600px] p-2 md:p-4 mb-7">
-            <h1 class="heading heading-1 text-center">Hi, I'm <span class="text-primary">Djoufson Che</span>, a .NET Fullstack Engineer.</h1>
-            <p class="text-center md:text-2xl">Building robust applications with <span class="text-primary font-bold">.NET</span> while empowering the <span class="text-primary font-bold">open-source</span> community.</p>
-            <img src="/assets/djouf.png" alt="Djoufson Che's Avatar" class="absolute w-[100px] h-[100px] rounded-full bottom-0 left-1/2 -translate-x-1/2">
+        <div class="container mx-auto flex flex-col gap-4 justify-center items-center h-[600px] p-2 md:p-4 mb-20">
+            <h1 class="heading heading-1 text-center">Hi, I'm <strong class="text-primary">Djoufson Che</strong>, a .NET Fullstack Engineer.</h1>
+            <p class="text-center md:text-2xl">Building robust applications with <strong class="text-primary font-bold">.NET</strong> while empowering the <strong class="text-primary font-bold">open-source</strong> community.</p>
+            <img src="/assets/djouf.png" alt="Djoufson Che's Avatar" class="mt-12 w-[100px] h-[100px] rounded-full">
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="section bg-black">
+        <div class="container mx-auto box p-2">
+            <h1 class="heading heading-1 text-white">Who I am?</h1>
+            <p class="text-white">Hello! I’m <strong class="font-bold text-secondary">Djoufson Che</strong>, a passionate .NET Fullstack engineer with a strong commitment to advancing technology and community. My journey in the tech world has been driven by a deep interest in <strong class="font-bold text-secondary">Microsoft technologies</strong>, <strong class="font-bold text-secondary">Open Source projects</strong>, and a desire to <strong class="font-bold text-secondary">contribute to the community</strong>. I thrive on learning new things and sharing knowledge through blogging and speaking engagements.</p>
+            <p class="text-white mt-4">Here are some key points that describe me.</p>
+
+            <div class="flex flex-wrap gap-8 mt-8 justify-center">
+                <!-- I created .NET Cameroon -->
+                <div class="w-[350px] h-[500px]">
+                    <img src="/assets/dotnetcameroon.png" alt=".NET Cameroon logo" class="w-full h-2/3">
+                    <div class="h-1/3 mt-4 flex flex-col gap-4">
+                        <p class="text-white">Founder of the <strong class="font-bold text-white">.NET Cameroon Community</strong>, where we foster learning and networking for .NET professionals in Cameroon.</p>
+                        <a href="https://dotnetcameroon.azurewebsites.net" title=".NET Cameroon website" target="_blank" class="link text-white">Join our community</a>
+                    </div>
+                </div>
+                <!-- I am an open source contributor -->
+                <div class="w-[350px] h-[500px]">
+                    <img src="/assets/opensource.png" alt="Open source contributor" class="w-full h-2/3">
+                    <div class="h-1/3 mt-4 flex flex-col gap-4">
+                        <p class="text-white">I contribute to <strong class="font-bold text-white">open source projects</strong>, improving tools and technologies through code and feedback.</p>
+                        <a href="https://github.com/djoufson" title="Djoufson Che's github" target="_blank" class="link text-white">Visit my GitHub</a>
+                    </div>
+                </div>
+                <!-- Member of the .NET Foundation -->
+                <div class="w-[350px] h-[500px]">
+                    <img src="/assets/dotnetfoundation.png" alt=".NET Foundation logo" class="w-full h-2/3">
+                    <div class="h-1/3 mt-4 flex flex-col gap-4">
+                        <p class="text-white">As a proud member of the <strong class="font-bold text-white">.NET Foundation</strong>, I support the growth and collaboration of the global .NET community.</p>
+                        <a href="https://dotnetfoundation.org" title=".NET Foundation website" target="_blank" class="link text-white">Visit the website</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </div>
