--- a/app/styles/input.css
+++ b/app/styles/input.css
@@ -5,6 +5,7 @@
 * {
     font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
+    @apply text-black;
 }
 
 body{
@@ -28,7 +29,7 @@ body{
 }
 
 .heading-1 {
-    @apply text-5xl md:text-8xl text-black leading-heading-1 mb-heading-1 font-heading font-bold;
+    @apply text-5xl md:text-8xl leading-heading-1 mb-heading-1 font-heading font-bold;
 }
 
 .heading-2 {
@@ -84,4 +85,8 @@ body{
 
 .container{
     max-width: 1200px;
+}
+
+.box{
+    @apply py-14 md:py-28;
 }
