--- a/app/wwwroot/app.css
+++ b/app/wwwroot/app.css
@@ -598,24 +598,8 @@ video {
   position: static;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
 .sticky {
   position: sticky;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-1\/2 {
-  left: 50%;
 }
 
 .top-0 {
@@ -631,8 +615,28 @@ video {
   margin-right: auto;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
@@ -647,6 +651,30 @@ video {
   height: 600px;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[4\] {
+  height: 4;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-\[100px\] {
   width: 100px;
 }
@@ -655,13 +683,24 @@ video {
   width: 100%;
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[350px\] {
+  width: 350px;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .justify-end {
@@ -676,8 +715,21 @@ video {
   gap: 1rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 45 45 / var(--tw-bg-opacity));
 }
 
 .bg-primary {
@@ -715,19 +767,9 @@ video {
   color: rgb(19 154 215 / var(--tw-text-opacity));
 }
 
-.text-primary-hover {
-  --tw-text-opacity: 1;
-  color: rgb(14 123 204 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(249 250 251 / var(--tw-text-opacity));
-}
-
-.text-secondary-hover {
-  --tw-text-opacity: 1;
-  color: rgb(167 165 40 / var(--tw-text-opacity));
 }
 
 .text-secondary {
@@ -738,6 +780,8 @@ video {
 * {
   font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   scroll-behavior: smooth;
+  --tw-text-opacity: 1;
+  color: rgb(45 45 45 / var(--tw-text-opacity));
 }
 
 body {
@@ -778,8 +822,6 @@ body {
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.2;
-  --tw-text-opacity: 1;
-  color: rgb(45 45 45 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -987,6 +1029,18 @@ body {
 
 .container{
   max-width: 1200px;
+}
+
+.box {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+@media (min-width: 768px) {
+  .box {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
 }
 
 .hover\:text-white-hover:hover {
