style: implement the expertise section

--- a/app/Components/Pages/Home.razor
+++ b/app/Components/Pages/Home.razor
@@ -51,4 +51,50 @@
             </div>
         </div>
     </section>
+
+    <!-- Skill and experience -->
+    <section class="section">
+        <div class="box container mx-auto p-2">
+            <h1 class="heading heading-1">Skills & Expertise</h1>
+            <p>With a strong background in full-stack development, I specialize in building web applications using .NET, Blazor, EF Core, and other Microsoft technologies. My expertise extends to API design, cloud solutions with Azure, and a deep commitment to open source contributions.</p>
+            <div class="mt-16 max-w-[850px] mx-auto p-4 border-[1px] border-slate-200 border-b-0">
+                <div class="flex gap-6">
+                    <div class="w-[100px] flex flex-col items-center">
+                        <img class="w-[100px] h-[100px] rounded-full object-contain" src="/assets/std.png" alt="L'Agence Digitale">
+                        <span class="w-[1px] h-[calc(100%-100px)] bg-slate-200"></span>
+                    </div>
+                    <div class="w-[calc(100%-100px)] pb-16 flex flex-col items-start">
+                        <h3 class="heading heading-3">Fullstack .NET Engineer @@ l'Agence Digitale</h3>
+                        <span class="font-bold">July 2024 - Present</span>
+                        <p>At this company I had the opportunity to work on large scale application, legacy NET Core 3 applications, and use my skills to maintain those applications.</p>
+                        <a href="https://www.l-agence.digital" class="mt-2 link" target="_blank">Reference</a>
+                    </div>
+                </div>
+                <div class="flex gap-6">
+                    <div class="w-[100px] flex flex-col items-center">
+                        <img class="h-[100px] rounded-full object-contain" src="/assets/infinitesolutions.png" alt="Infinite Solutions">
+                        <span class="w-[1px] h-[calc(100%-100px)] bg-slate-200"></span>
+                    </div>
+                    <div class="w-[calc(100%-100px)] pb-16 flex flex-col items-start">
+                        <h3 class="heading heading-3">.NET Developer @@ Infinite Solutions</h3>
+                        <span class="font-bold">June 2022 - July 2024</span>
+                        <p>At this company, I had an internship as a software NET developer, building backend applications for customers. I learned there the mobile development with the framework .NET MAU!.</p>
+                        <a href="https://www.isolutions-intl.com" class="mt-2 link" target="_blank">Reference</a>
+                    </div>
+                </div>
+                <div class="flex gap-6">
+                    <div class="w-[100px] flex flex-col items-center">
+                        <img class="h-[100px] rounded-full object-contain" src="/assets/cdreams.jpeg" alt="C-Dreams">
+                        <span class="w-[1px] h-[calc(100%-100px)] bg-slate-200"></span>
+                    </div>
+                    <div class="w-[calc(100%-100px)] pb-16 flex flex-col items-start">
+                        <h3 class="heading heading-3">Game developer @@ C-dreams</h3>
+                        <span class="font-bold">September 2021 - May 2022</span>
+                        <p>C-Dream is a Cameroonian team of game developers that aims to make games become a key point of the tech industry in this country. There we built some games using Unity3D game engine.</p>
+                        <a href="https://github.com/cdreams-gamedev" class="mt-2 link" target="_blank">Reference</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
