--- a/app/wwwroot/app.css
+++ b/app/wwwroot/app.css
@@ -623,8 +623,12 @@ video {
   margin-top: 3rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-4 {
@@ -635,124 +639,52 @@ video {
   margin-top: 2rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .flex {
   display: flex;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[4\] {
-  height: 4;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-2\/3 {
-  height: 66.666667%;
 }
 
 .h-1\/3 {
   height: 33.333333%;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-2\/3 {
+  height: 66.666667%;
 }
 
-.h-\[calc\(100\)\] {
-  height: calc(100);
+.h-\[100px\] {
+  height: 100px;
 }
 
-.h-\[calc\(100\%-200px\)\] {
-  height: calc(100% - 200px);
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[600px\] {
+  height: 600px;
 }
 
 .h-\[calc\(100\%-100px\)\] {
   height: calc(100% - 100px);
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-\[100px\] {
   width: 100px;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[350px\] {
-  width: 350px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[calc\(100\%-200px\)\] {
-  width: calc(100% - 200px);
-}
-
-.w-\[2px\] {
-  width: 2px;
 }
 
 .w-\[1px\] {
   width: 1px;
 }
 
-.w-auto {
-  width: auto;
+.w-\[350px\] {
+  width: 350px;
 }
 
 .w-\[calc\(100\%-100px\)\] {
   width: calc(100% - 100px);
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[900px\] {
-  max-width: 900px;
-}
-
-.max-w-\[800px\] {
-  max-width: 800px;
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[850px\] {
@@ -775,10 +707,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-end {
   justify-content: flex-end;
 }
@@ -787,20 +715,20 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded-full {
@@ -813,11 +741,6 @@ video {
 
 .border-b-0 {
   border-bottom-width: 0px;
-}
-
-.border-slate-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
 .border-slate-200 {
@@ -835,28 +758,18 @@ video {
   background-color: rgb(19 154 215 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 
 .p-2 {
@@ -872,28 +785,8 @@ video {
   padding-right: 1rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
 .pb-16 {
   padding-bottom: 4rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
 }
 
 .text-center {
@@ -909,26 +802,26 @@ video {
   color: rgb(19 154 215 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
-}
-
 .text-secondary {
   --tw-text-opacity: 1;
   color: rgb(190 185 50 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
 * {
   font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   scroll-behavior: smooth;
-  --tw-text-opacity: 1;
-  color: rgb(45 45 45 / var(--tw-text-opacity));
 }
 
 body {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(45 45 45 / var(--tw-text-opacity));
 }
 
 ::-moz-selection {
