--- a/app/styles/input.css
+++ b/app/styles/input.css
@@ -90,3 +90,28 @@ body{
 .box{
     @apply py-14 md:py-28;
 }
+
+.animated{
+    position: relative;
+}
+
+.fade-in{
+    transform: translateY(100px);
+    opacity: 0;
+    transition: transform 600ms ease-in-out, opacity 450ms ease-in-out;
+}
+
+.fade-in.triggered{
+    position: relative;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.appear{
+    opacity: 0;
+}
+
+.appear.triggered{
+    opacity: 1;
+    transition: transform 600ms ease-in-out, opacity 450ms ease-in-out;
+}
