refatcor: changing the dotnetcameroon website url

--- a/app/Components/Pages/Home.razor
+++ b/app/Components/Pages/Home.razor
@@ -34,7 +34,7 @@
                     <img src="/assets/dotnetcameroon.png" alt=".NET Cameroon logo" class="w-full h-2/3">
                     <div class="h-1/3 mt-4 flex flex-col gap-4">
                         <p class="text-white">Founder of the <strong class="font-bold text-white">.NET Cameroon Community</strong>, where we foster learning and networking for .NET professionals in Cameroon.</p>
-                        <a href="https://dotnetcameroon.azurewebsites.net" title=".NET Cameroon website" target="_blank" class="link text-white">Join our community</a>
+                        <a href="https://dotnet.cm" title=".NET Cameroon website" target="_blank" class="link text-white">Join our community</a>
                     </div>
                 </div>
                 <!-- I am an open source contributor -->
